--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>math-mama-mentor</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <meta name="description" content="Created by the Icode team" />
     <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="math-mama-mentor" />
